src/src/objects/Responses__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Master__c</fullName>
        <label>Question Master</label>
        <referenceTo>Question_Master__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sorting_Number__c</fullName>
        <label>Sorting Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Responses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Answer_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Responses_Created</fullName>
        <columns>NAME</columns>
        <columns>Question_Master__c</columns>
        <columns>Answer_Text__c</columns>
        <filterScope>Mine</filterScope>
        <label>Responses Created</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>